--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,8 +25,7 @@ steps:
     buildType: 'current'
     downloadType: 'specific'
     downloadPath: '$(Build.ArtifactStagingDirectory)'
-- task: PublishBuildArtifacts@1
+- task: CopyFiles@2
   inputs:
-    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-    ArtifactName: 'MavenPublishArtifact'
-    publishLocation: 'Container'
+    Contents: '**/.war'
+    TargetFolder: '$(Build.ArtifactStagingDirectory)'
